kustomize/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: task-list
  name: task-list
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-list
  template:
    metadata:
      labels:
        app: task-list
    spec:
      containers:
        - name: task-list
          image: registry.ocp4.example.com:8443/redhattraining/todo-angular:v1.1
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: "1"
              memory: 512Mi
          ports:
            - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /
              port: 8080
          livenessProbe:
            initialDelaySeconds: 15
            httpGet:
              path: /
              port: 8080
          securityContext:
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
          imagePullPolicy: Always
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
