kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: task-list
  name: task-list
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: task-list
