kustomize/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: task-list
  name: task-list
spec:
  to:
    kind: Service
    name: task-list
